# f1_martGenie

./: .gitignore
nexbuy_backend/: .env.example  .gitignore  CHAT_REAL_API_CONTRACT.md  README.md  pyproject.toml  spu_result.md
nexbuy_backend/src/: main.py
nexbuy_backend/src/buy_agent/: __init__.py  llm_decider.py  policy.py  schema.py  service.py
nexbuy_backend/src/chat_history/: schema.py  service.py
nexbuy_backend/src/favorites/: service.py
nexbuy_backend/src/get_data/: crawl_homary_reviews.py  get_product_data.py  make_product_ids.py
nexbuy_backend/src/import_data/: backfill_product_embeddings.py  import_product.py
nexbuy_backend/src/model/: __init__.py  config.py
nexbuy_backend/src/model/bundle_composer/: __init__.py  composer.py  prompt.py  schema.py
nexbuy_backend/src/model/query_data/: __init__.py  (+6 more)
nexbuy_backend/src/openrouter/: client.py
nexbuy_backend/src/plaza/: __init__.py  schema.py  service.py
nexbuy_backend/src/products/: schema.py  service.py
nexbuy_backend/src/profile/: __init__.py  schema.py  service.py
nexbuy_backend/src/projects/: schema.py  service.py
nexbuy_backend/src/sell_agent/: agent.py  db.py  llm_parser.py  llm_responder.py  schema.py  service.py
nexbuy_backend/src/tests/: check_database_connection.py  test_buy_agent_policy.py  test_query_data.py  test_recommendation_latency.py  test_sell_agent_negotiation.py  test_sell_agent_service.py  test_user_content_analysis.py  test_user_content_analysis_normalize.py
nexbuy_backend/src/web/: agent_negotiation_router.py  chat_router.py  main.py  negotiation_router.py
(+78 files in other folders)
