[project]
name = "nexbuy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "fastapi-users>=14.0.1",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "httpx-oauth>=0.16.1",
    "pydantic-settings>=2.10.1",
    "playwright>=1.58.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
